encoding/jsonschema/testdata/txtar/crd_ref.txtar
CRDs do not allow $ref, so test for that.

#version: k8sCRD

-- schema.yaml --
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  # name must be in the form: <plural>.<group>
  name: myapps.example.com
spec:
  # group name to use for REST API: /apis/<group>/<version>
  group: example.com
  scope: Namespaced
  names:
    # kind is normally the CamelCased singular type.
    kind: MyApp
    # singular name to be used as an alias on the CLI
    singular: myapp
    # plural name in the URL: /apis/<group>/<version>/<plural>
    plural: myapps
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            $ref: "#/something"

-- out/decode/extract --
ERROR:
keyword "$ref" is not supported in JSON schema version Kubernetes CRD:
    schema.yaml:26:13
-- out/decodeCRD/extractCRD/error --
keyword "$ref" is not supported in JSON schema version Kubernetes CRD
-- out/decodeCRD-v3/extractCRD/error --
keyword "$ref" is not supported in JSON schema version Kubernetes CRD
-- out/decode-v3-noshare/extract --
ERROR:
keyword "$ref" is not supported in JSON schema version Kubernetes CRD:
    schema.yaml:26:13
